# ffbo.nlp_component

./: Dockerfile  LICENSE.md  README.md  config.ini  contributors.txt  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
docker/: Dockerfile  docker_build.sh  docker_run.sh
docker/production/: Dockerfile
nlp_component/: config.py  nlp_component.py  run_component_docker.sh  version.py
tests/: test_language_detect.py
